2-advance回答案の提出

--- a/2-advance/index.html
+++ b/2-advance/index.html
@@ -7,10 +7,12 @@
   </head>
   <body>
     <div class="wrapper">
-      <div class="circle"></div>
-      <div class="circle"></div>
-      <div class="circle"></div>
+      <div class="circle" id="circle1"></div>
+      <div class="circle" id="circle2"></div>
+      <div class="circle"  id="circle3"></div>
     </div>
+    <button id="start" onclick="start()">Start</button>
+    <button id="stop" onclick="stop()">Stop</button>
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
